--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
+    "jest-mock-extended": "^3.0.1",
     "lint-staged": "^13.0.3",
     "ts-jest": "^29.0.3",
     "typescript": "^4.4.2"
