--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "lint-staged": "^13.0.3",
+    "prisma": "^4.9.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.4.2"
   }
