--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "eslint-plugin-n": "^15.0.0",
     "module-alias": "^2.2.2",
     "rimraf": "^3.0.2"
