--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "cors": "^2.8.5",
     "eslint-plugin-n": "^15.0.0",
+    "express": "^4.18.2",
     "module-alias": "^2.2.2",
     "rimraf": "^3.0.2",
     "zod": "^3.20.2"
@@ -24,6 +26,8 @@
     "node": "16.x"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
     "@types/jest": "^29.2.3",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.9",
