--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only --clear --inspect=0.0.0.0:9229 src/main",
     "build": "rimraf dist && tsc -p tsconfig-prod.json",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
@@ -43,6 +44,7 @@
     "lint-staged": "^13.0.3",
     "prisma": "^4.9.0",
     "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.4.2"
   }
 }
