--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "lint-staged": "^13.0.3",
+    "mockdate": "^3.0.5",
     "prisma": "^4.9.0",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
