chore: add tutorial to run project

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --clear --inspect=0.0.0.0:9229 src/main",
+    "migrate:dev": "npx prisma migrate dev",
     "build": "rimraf dist && tsc -p tsconfig-prod.json",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
